@@ -1,6 +1,7 @@
 0.22
  - Add cover cleanup use case.
  - Add edition number cleanup use case.
+ - Add publication place cleanup use case.
  - Add tests for three ISBNs in book edition.
 
 0.21 2024-11-25T23:55:13+01:00
